--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Sample</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_main2">MainActivity</string>
 </resources>
